css/detail.css
/* Detailed View */


.close {
	display: none;
	color: #777;
	padding: 20px;
	cursor: pointer;
	font: 14px/100% arial, sans-serif;
	font-size: xx-large;
	position: fixed;
	right: 5px;
	text-decoration: none;
	text-shadow: 0 1px 0 #fff;
	top: 5px;
	z-index: 25;
}
.close:after {
	content: '×'; /* UTF-8 symbol */
}

#detail {
	display: none;
    position: fixed;
    z-index: 20;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 100%;
    background-color: white;
    overflow: scroll;
}

#detail div.entry {
	padding: 20px;
	padding-bottom: 150px;
	text-align: center;
}
#detail br {
	margin-bottom: 40px;
}
#detail h1 {
    color: rgb(92, 99, 99);
    font-size: 48px;
    margin-top: 48px;
    font-weight: bold;
}
#detail h2, figcaption {
	font-family: 'PT Serif', serif;
	color: rgb(171, 175, 175);
	margin-bottom: 20px;
	font-style: italic;
}
#detail h4 {
    text-transform: uppercase;
    font-size: x-large;
    padding-top: 20px;
    padding-bottom: 20px;
    color: rgb(75, 81, 81);
}
#detail p {
	color: rgb(127, 141, 140);
	font-size: 22px;
	line-height: 33px;
	margin: auto;
	margin-bottom: 20px;
	max-width: 600px;
}

#detail img {
	max-height: 450px;
	max-width: 100%;
}

#detail strong {
    font-weight: bold;
}
#detail a:not(.button) {
    color: #5D7D9C;
    text-decoration: underline;
    font-size: larger;
}
.button {
	padding: 0 20px;
	font-family: 'Source Sans Pro', sans-serif;
    color: rgb(95, 95, 95);
    font-size: 22px;
}
.button.disabled {
    color: rgba(95, 95, 95, 0.1);
    cursor: default;
}
.prev {
	float: left;
}
.next {
	float: right;
}

.hidden {
	display: none;
}
.visible {
	display: block;
}
.pager {
    border-top: 1px solid #DDD;
	background-color: gray;
	position: fixed;
	bottom: 0;
	width: 100%;
	height: 50px;
	line-height: 50px;
	background-color: #EEE;
    padding: 0 !important;
}

